kubernetes/manifests/overlays/test/test-traefik-dashboard.yaml
---
# test-traefik-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - web
  routes:
    - match: Host("traefik.test-khc.ghimele.com") && (PathPrefix("/dashboard") || PathPrefix("/api"))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
